--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,56 +1,44 @@
-name: Build, Push Docker Image and Generate Artifact
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
-      - main
+      - "quintoa"
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # ----------------- CHECKOUT -----------------
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # -------- LOGIN GHCR --------
-      - name: Login to GHCR
+      # ----------------- PYTHON VERSION -----------------
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      # ----------------- LOGIN GHCR -----------------
+      - name: 🔐 Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      # -------- METADATA DOCKER --------
-      - name: Extract metadata (tags, labels)
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository }}/flask-app
-
-      # -------- BUILD & PUSH --------
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+      # ----------------- BUILD + PUSH -----------------
+      - name: 🏗️ Build and Push Docker Image
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
-      # -------- CREATE ARTIFACT PACKAGE --------
-      - name: Create deployment package (zip)
-        run: |
-          mkdir -p package
-          cp stack.yml package/
-          cp -r app.py Dockerfile requirements.txt Makefile .gitignore package/
-          cd package
-          zip -r package_${{ github.sha }}.zip .
-          mv package_${{ github.sha }}.zip ../
-
-      # -------- UPLOAD ARTIFACT --------
-      - name: Upload deployment package artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: deployment-package
-          path: package_${{ github.sha }}.zip
+          tags: |
+            ghcr.io/${{ github.repository }}/flask-app:latest
+            ghcr.io/${{ github.repository }}/flask-app:${{ github.sha }}
