--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CR_PAT }}
 
       - name: 🏗️ Build and Push Docker Image
         uses: docker/build-push-action@v6
@@ -37,4 +37,4 @@ jobs:
           push: true
           tags: |
             ghcr.io/tell1to-github/flask-app:latest
-            ghcr.io/tell1to-github/flask-app:${{ github.sha }}
+           
