--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,5 +36,5 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}/flask-app:latest
-            ghcr.io/${{ github.repository }}/flask-app:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/${{ github.repository | lower }}:latest
+            ghcr.io/${{ github.repository_owner }}/${{ github.repository | lower }}:${{ github.sha }}
