--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ toLower(github.repository) }}:latest
-            ghcr.io/${{ github.repository_owner }}/${{ toLower(github.repository) }}:${{ github.sha }}
+            ghcr.io/tell1to/actv-19-11:latest
+            ghcr.io/tell1to/actv-19-11:${{ github.sha }}
+
 
