--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,3 +69,19 @@ jobs:
           port: ${{ secrets.VPS_SSH_PORT }}
           source: "stack.yml"
           target: "/home/${{ secrets.VPS_USER }}/despliegue/stack.yml"
+      
+      - name: Desplegando servicios
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          port: ${{ secrets.VPS_SSH_PORT }}
+          script: |
+            echo "🚀 Desplegando la nueva versión de la aplicación..."
+
+            docker stack rm actv-19-11 || true
+
+            docker pull ghcr.io/tell1to/actv-19-11/flask-app:main
+
+            docker stack deploy -c stack.yml actv-19-11 --with-registry-auth actv-19-11
