--- a/stack.yml
+++ b/stack.yml
@@ -4,24 +4,18 @@ services:
   flaskapp:
     image: ghcr.io/tell1to/actv-19-11/flask-app:latest
     deploy:
-      replicas: 1
-      resources:
-        limits:
-          cpus: "0.50"
-          memory: 512M
       labels:
         - "traefik.enable=true"
         - "traefik.http.routers.flaskapp.entrypoints=http"
-        - "traefik.http.routers.flaskapp.rule=Host(`tell1to-app-traefik.com`)"
+        - "traefik.http.routers.flaskapp.rule=Host(`flaskapp.byronrm.com`)"
         - "traefik.http.middlewares.flaskapp-https-redirect.redirectscheme.scheme=https"
         - "traefik.http.routers.flaskapp.middlewares=flaskapp-https-redirect"
         - "traefik.http.routers.flaskapp-secure.entrypoints=https"
-        - "traefik.http.routers.flaskapp-secure.rule=Host(`tell1to-app-traefik.com`)"
+        - "traefik.http.routers.flaskapp-secure.rule=Host(`flaskapp.byronrm.com`)"
         - "traefik.http.routers.flaskapp-secure.tls=true"
         - "traefik.http.routers.flaskapp-secure.tls.certresolver=http"
         - "traefik.http.routers.flaskapp-secure.service=flaskapp"
         - "traefik.http.services.flaskapp.loadbalancer.server.port=8302"
-
         - "traefik.docker.network=traefik-public"
 
     networks:
